--- a/app/views/invite/send_invite.html.erb
+++ b/app/views/invite/send_invite.html.erb
@@ -1,6 +1,6 @@
-<h3>How's you doing</h3>
+<h4>Hey! how's you doing</h4>
 
 <p>I've been using this app lately and mehn! its supercool. would love to share stuff you.<br/>
-<p>You can join via this <a href="<%= @invite[:link] %>">secured link</a></p>
+<p>You can join via this <a href="<%= @invite[:link] %>">secure link</a></p>
 
 <p>Thanks, would be expecting..</p>
