--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -6,26 +6,28 @@
   margin: .6em 1em;;
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: .3em;
+  padding: 0;
   background-color: #fff;
   box-shadow: 3px 3px 1px 8px #ccc;
   -moz-box-shadow: 3px 3px 1px 8px #ccc;
   -webkit-box-shadow: 0px 0px 8px 2px #ccc;
-  width: 255px;
+  //width: 255px;
 
   img {
     width: 100%;
-    height: 230px;
+    height: 100%;
   }
 
   .title {
     margin-top: .5em;
-    //font-weight: bold;
+    border-bottom: 1px solid #ccc;
   }
 
   .btn { 
+    margin-top: 0;
     padding: .2em;
     color: #d10069;
+    margin-bottom: .5em;
 
     &:hover {
       background: #fff;
@@ -34,24 +36,36 @@
 
   }
 
-  .fa { font-size: 1.4em; }
+  .fa { font-size: 1.6em; }
 
   figcaption {
+    margin: .3em;
     margin-top: 1em;
-    border-top: 1px solid #ccc;
   }
 }
 //transitions:
 
 .gallery-item {
-  -webkit-transition: all 0.8s ease-in;
-  -moz-transition: all 0.8s ease-in;
-  -o-transition: all 0.8s ease-in;
-  transition: all 0.8s ease-in; 
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in; 
 }
 
 .gallery-item:hover {
   box-shadow: 0px 0px 4px 2px #d10069;
   -moz-box-shadow: 0px 0px 4px 2px #d10069;
   -webkit-box-shadow: 0px 0px 3px 1px #d10069;  
+}
+
+.info-section {
+  //margin-top: 1em;
+  span {
+    margin-right: .5em;
+
+    &.like_count { 
+      font-style: italic;
+      color: #4670a0;
+    }
+  }
 }
