--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#welcome-header {
+  text-align: center;
+  width: 30%;
+  margin: 9em auto 0 auto;
 
-#send_invite_btn {
-  margin-top:1em;
+  h3 {
+    color: #ff6600;
+    font-weight: bold;
+  }
+
+  p { color: #587058 }
+}
+
+#welcome-form {
+  width: 30%;
+  margin: 2em auto;
 }
