--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,67 @@
-<h2>Sign up</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Pixly</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+  <div class="container"> 
+    <div class="col-md-12">
+      <% if notice || alert %>
+        <div class="alert alert-info alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <strong><%= notice || alert %></strong>
+        </div>
+      <% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <section id="content-holder">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">MENU</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="<%= root_path %>">Pixly  <small id="app-spec">lite</small></a>
+            </div>
+          </div><!-- /.container-fluid -->
+        </nav>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+        <section id="welcome-header">
+          <h3>Welcome to Pixly!</h3>
+          <p>Just setup ur password and you're in!</p>
+        </section>
+
+        <section id="welcome-form">
+          <%= form_for(resource, url: user_registration_path(resource)) do |f| %>
+            <div class="field form-section">
+              <%= f.email_field :email, value: @referee, class: "form-control" %>
+            </div>
+
+            <div class="field form-section">
+              <% if @validatable %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %>
+              <%= f.password_field :password, autocomplete: "off", autofocus: true, class: "form-control", placeholder: "Enter your password" %>
+            </div>
+
+            <div class="field form-section">
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Confirm your password" %>
+            </div>
+
+            <input type="hidden" name="sender_id" value="<%= @referer %>">
+            <div class="actions">
+              <%= f.submit "Sign up", class: "btn btn-lg btn-primary full-width" %>
+            </div>
+          <% end %>
+        </section>
+      </section>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
+</html>
