--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,13 @@
           <li><%= link_to "Share a photo", "#",  data: { toggle: "modal", target: "#upload_image_modal" } %></li>
           <li><a href="#" data-toggle="modal" data-target = "#invite_user_modal"><i class="fa fa-user-plus"></i></a></li>
         </ul>
+
+
+        <ul class="nav navbar-nav pull-right">
+          <% @categories.each do |category| %>
+            <li><%= link_to category.name, photos_path(filter: category.name), remote: true %></li>
+          <% end %>
+        </ul>
       <% end %>
     </div>
 
@@ -22,7 +29,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li class="dropdown">           
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> 
               <span><i class="fa fa-user"></i></span>
               <span class="caret"></span>
