--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -16,7 +16,11 @@
   </div>
 
   <div class="form-section">
-    <%= f.text_field :title, placeholder: "A short description..", class: "form-control"%>
+    <%= f.collection_select :category_id, @categories, :id, :name, { prompt: "Select a category"}, class: "form-control"%>
+  </div>
+
+  <div class="form-section">
+    <%= f.text_area :title, placeholder: "A short description..", rows: "7", class: "form-control"%>
   </div>
 
   <div class="actions">
