--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= render @photos %>
+<section id="main-grid" class="col-md-8 col-sm-12">
+  <% if @photos %>
+    <%= render @photos %>
+  <% else %>
+    <h3>Oops! there are no photos to show!</h3>
+  <% end %>
+</section>
+
+<section id="trending-grid" class="col-md-4 col-sm-0">
+  <h4>Trending</h4>
+</section>
