Fix mail host error

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,3 +31,7 @@ form .form-control, form .btn  {
 .navbar-inverse .navbar-nav > li > a {
   color: #fcfcfc;
 }
+
+.alert-info {
+  margin: 1em 2em;
+}
