--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,16 @@
       <%= render partial: "layouts/header" %>
   </header>
   <div class="container"> 
-    <div class="col-md-12">
+    <section id="content-holder" class="col-md-12">
       <% if notice || alert %>
         <div class="alert alert-info alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <strong><%= notice || alert %></strong>
         </div>
       <% end %>
-
-      <section id="content-holder">
-        <%= yield %>
-      </section>
-    </div>
+      
+      <%= yield %>
+    </section>
   </div>
 
   <% if current_user %>
