--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,6 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-
 <section id="main-grid" class="col-md-8 col-sm-12">
   <% if @photos %>
     <%= render @photos %>
@@ -10,5 +7,9 @@
 </section>
 
 <section id="trending-grid" class="col-md-4 col-sm-0">
-  <h4>Trending</h4>
+  <h4 class="well well-sm">Trending</h4>
+  <% @trending_photos.each do |trending_photo| %>
+    <%= render "shared/trending_photo", photo: trending_photo %>
+  <% end %>
 </section>
+<div class="clearfix"></div>
