--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,3 +35,11 @@ form .form-control, form .btn  {
 .alert-info {
   margin: 1em 2em;
 }
+
+.btn.signin {
+  margin-top: 0;
+}
+
+.already_liked_notice {
+  color: #fff;
+}
