--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,13 @@
           <strong><%= notice || alert %></strong>
         </div>
       <% end %>
-      
+
       <%= yield %>
+
     </section>
   </div>
 
+  <%= render "shared/like_photo" %>
   <% if current_user %>
     <%= render "shared/upload_photo" %>
 
