--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -6,11 +6,16 @@
       <section class="info-section force-inline pull-left">
         <span class="user_info"><%= photo.user ? photo.user.email : "testUser" %></span>
         <span class="like_count"><%= pluralize(photo.like_count, "like") %></span>
+
       </section>
-      <section class="action_section">
-      
-        <%= button_to like_photo_path(photo), class: 'like_photo btn btn-default pull-right', remote: true do %>
-                <%= content_tag(:i, nil, class:"fa fa-heart-o") %>
+      <section class="action_section pull-right">
+        <span class="<%= photo.id %> already_liked_notice">You've already liked this photo</span>
+        <% if current_user %>
+          <%= button_to like_photos_path, data: { photo_id: photo.id }, class: 'like_photo btn btn-default pull-right', remote: true do %>
+                  <%= content_tag(:i, nil, class:"fa fa-heart-o") %>
+          <% end %>
+        <% else %>
+          <button data-photo-id="<%= photo.id %>" class="like_photo guest_like_btn btn btn-default"><i class="fa fa-heart-o"></i></button>
         <% end %>
       </section
     </figcaption>
