--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -42,4 +42,11 @@ form .form-control, form .btn  {
 
 .already_liked_notice {
   color: #fff;
+  margin-right: .5em;
+  margin-top: .6em;
+  display: inline-block;
+}
+
+form.button_to {
+  display: inline !important;
 }
