Bug fixed, moidfy css for trending titles

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -59,7 +59,10 @@
   border-bottom: none;
   border-top: 0;
 
-  .title { text-align: right }
+  .title { 
+    text-align: right;
+    font-weight: normal;
+  }
 }
 
 
