--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,14 +15,13 @@
           <li><%= link_to "Share a photo", "#",  data: { toggle: "modal", target: "#upload_image_modal" } %></li>
           <li><a href="#" data-toggle="modal" data-target = "#invite_user_modal"><i class="fa fa-user-plus"></i></a></li>
         </ul>
+      <% end %>
 
-
-        <ul class="nav navbar-nav pull-right">
+       <ul class="nav navbar-nav pull-right">
           <% @categories.each do |category| %>
             <li><%= link_to category.name, photos_path(filter: category.name), remote: true %></li>
           <% end %>
         </ul>
-      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,7 +30,7 @@
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> 
-              <span><i class="fa fa-user"></i></span>
+              <span><i class="fa fa-user"> <%= current_user.email %> </i></span>
               <span class="caret"></span>
             </a>      
             <ul class="dropdown-menu" role="menu">
