--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -10,6 +10,7 @@
       </section>
       <section class="action_section pull-right">
         <span class="<%= photo.id %> already_liked_notice">You already liked this</span>
+        <button data-photo-id="<%= photo.id %>" class="share_photo guest_like_btn btn btn-default"><i class="fa fa-share-alt"></i></button>
         <% if current_user %>
           <%= button_to like_photos_path(id: photo.id), data: { photo_id: photo.id }, class: 'like_photo btn btn-default pull-right', remote: true do %>
               <%= content_tag(:i, nil, class:"fa fa-heart-o") %>
