--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -16,6 +16,8 @@
   img {
     width: 100%;
     height: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
   }
 
   .title {
@@ -29,6 +31,8 @@
     padding: .2em;
     color: #d10069;
     margin-bottom: .5em;
+    margin-left: .5em;
+    border: none;
 
     &:hover {
       background: #fff;
@@ -37,7 +41,7 @@
 
   }
 
-  .fa { font-size: 1.6em; }
+  .fa { font-size: 1.2em; }
 
   figcaption {
     margin: .3em;
@@ -98,11 +102,14 @@
 }
 
 .already_liked_notice {
-  font-size: .7em;
+  display: inline-block !important;
+  font-size: .8em;
+  //font-weight: bold;
   color: #fff;
-  margin-right: .5em;
-  margin-top: .6em;
-  display: inline-block;
-  background-color: #fff;
+  margin-right: 3.2em;
+  margin-bottom: 1em;
+  background-color: transparent;
   border-radius: 4px;
+  width: 11em;
+  padding-left: 1em;
 }
