--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <%= render "shared/like_photo" %>
   <% if current_user %>
     <%= render "shared/upload_photo" %>
-
+    <%= render "shared/share_image" %>
     <%= render "shared/invite_user" %>
   <% end %>
 </body>
