Implement photo sharing via email

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,19 @@
+body {
+  background-color: #f0f0f0 !important;
+}
+
+.hidden {
+  display: block;
+}
+
+.slide {
+  height: 10em;
+}
+
+.show-as-block { 
+  display: block;
+}
+
 #content-holder {
   margin-top: 4em;
 }
@@ -8,6 +24,10 @@
 
 .modal-dialog {
   margin-top: 100px;
+}
+
+.modal-body {
+  padding-top: 0;
 }
 
 .navbar {
@@ -46,7 +66,8 @@ form.button_to {
   display: inline !important;
 }
 
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+.navbar-i
+nverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
   background-color: #4670a0;
   color: #fff;
 }
@@ -58,5 +79,10 @@ form.button_to {
   filter: alpha(opacity=80);
 }
 
-.gallery-item { width: 23%; }
+#loaderImg {
+  display: block;
+  width: 50px;
+}
+
+.gallery-item { width: 31.5%; }
 .gallery-item.w2 { width: 50%; } 
