--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,29 @@
-<p id="notice"><%= notice %></p>
+<section class="col-md-9 mainbar">
+  <figure data-id="<%= @photo.id %>" class="gallery-item-show col-md-12">
+    <%= image_tag(image_path(@photo.image_url), class: "photo_img") %>
+    <figcaption>
+      <p class="title"><%= @photo.title %></p>
 
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+      <section class="info-section force-inline pull-left">
+        <span class="user_info"><%= @photo.user ? @photo.user.email.split('@')[0] : "testUser" %></span><br/>
+        <span class="like_count"><%= pluralize(@photo.like_count, "like") %></span>
+
+      </section>
+      <section class="action_section pull-right">
+        <span class="<%= @photo.id %> already_liked_notice">You already liked this</span>
+        <% if current_user %>
+          <button data-photo-id="<%= @photo.id %>" class="share_photo btn btn-default" data-image="<%= image_path(@photo.image_url) %>"><i class="fa fa-share-alt"></i></button>
+          <%= button_to like_photos_path(id: @photo.id), data: { photo_id: @photo.id }, class: 'like_photo btn btn-default pull-right', remote: true do %>
+              <%= content_tag(:i, nil, class:"fa fa-heart") %>
+          <% end %>
+        <% else %>
+          <button data-photo-id="<%= @photo.id %>" class="like_photo guest_like_btn btn btn-default"><i class="fa fa-heart"></i></button>
+        <% end %>
+      </section
+    </figcaption>
+  </figure>
+</section>
+
+<section class="col-md-3 sidebar">
+  
+</section>
