Add welcome banner

--- a/app/views/photo_mailer/share.html.erb
+++ b/app/views/photo_mailer/share.html.erb
@@ -2,4 +2,4 @@
 <p>Hey, wadup</p>
 
 <p>I came accross this photo on pixly, i think its something you'll like. </p>
-<a href="<%= @share_info["photo_path"]  %>"><img src="<%= @share_info["image_url"]  %>" alt="@share_info.image_name"></img></a>
+<a href="<%= @share_info["photo_path"]  %>"><img src="<%= @share_info["image_url"]  %>" alt="@share_info["image_name"]"></img></a>
